--- a/languages/real-time-comments-de_DE.po
+++ b/languages/real-time-comments-de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Real Time Comments\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-29 21:00+0000\n"
-"PO-Revision-Date: 2021-11-01 14:18+0000\n"
+"PO-Revision-Date: 2021-11-03 12:13+0000\n"
 "Last-Translator: Gerhard Popp\n"
 "Language-Team: Deutsch\n"
 "Language: de_DE\n"
@@ -66,7 +66,7 @@ msgstr "Geshrieben"
 
 #: classes/AdminSettingsPages.php:76
 msgid "Puser app id"
-msgstr "Puher App ID"
+msgstr "Pusher App ID"
 
 #: classes/AdminSettingsPages.php:46
 msgid "Puser auth key"
